monitoring/victoria-metrics/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: victoriametrics-operator
  labels:
    name: victoriametrics-operator
  annotations:
    argocd.argoproj.io/sync-wave: "0"
