monitoring/victoria-metrics/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoria-metrics
  namespace: victoria-metrics
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - "victoriametrics.vanillax.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: vmsingle
          namespace: victoria-metrics
          port: 8428
          weight: 1
